Changelog of pam-redhat modules
-------------------------------

This changelog describes only changes after branching of pam-redhat modules
without autoconf support.

0.78-4: Thu Mar 10 2005

* Merged fix for gcc4 compilation and config file parsing from dist
* Added functionality for executing binaries when locking/unlocking console
* Distribute as tar.bz2

0.78-3: Wed Jan 12 2005

* Correct a bad merge in pam_console
* Make pam_localuser and pam_xauth to be in sync with upstream

0.78-2: Mon Jan 10 2005

* Backported some changes from head (tmraz)
* pam_localuser, pam_succeed_if, pam_xauth are no longer developed here
  - they were accepted to upstream Linux PAM repository
* Applied fixes by Steve Grubb (tmraz)
* pam_console: Changed the console.lock file to console/console.lock (tmraz)
* pam_stack: Overwrite the conversation function too (tmraz)
* pam_console: Don't check the ownership of terminal on logout - we don't
  have it on X crash (tmraz)
* pam_stack: Fix memory leaks (tmraz)
* pam_timestamp: Ignore the timestamp file if it's older than oldest 
  login (tmraz)
* Allow using pam_console for authentication (tmraz)
* Add a file parameter to pam_console_apply to apply its work only on 
  that file (tmraz)